--- a/src/Components/BurgerBuilder/Control/Control.css
+++ b/src/Components/BurgerBuilder/Control/Control.css
@@ -1,3 +1,10 @@
 .tophead {
   background-color: #d70f64 !important;
 }
+
+.items {
+  text-transform: capitalize;
+}
+.icons {
+  padding-left: 5px;
+}
